I'm working on week 2, periodically updating per the lecture.

--- a/CSS_Video_1.html
+++ b/CSS_Video_1.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-
+<!--I just commented and worked in various files here to give the notes context, so little here.-->
 </body>
 </html>
