--- a/basic_html_page.html
+++ b/basic_html_page.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>My first web page</title>
+
+<!--  Add a *link* tag to the head elements to tell the browser what style to add the style.css sheet info to the site.
+rel= *what it's linking to*, type = *the form the file is in*, href (*location*) = name of CSS file
+
+Then in the style sheet, write rules/ descriptions using colors and fonts, etc.
+-->
   <link rel="stylesheet" type="text/css" href="style.css">
 
 
@@ -24,6 +30,7 @@
 <h2>Things we'll learn in this class</h2>
 
 <!--Unordered list (with bullet points, but no numbers)-->
+<!--Also need to nest some things to tell the browser what is included-->
 <ul>
   <li>HTML</li>
   <li>Vue.js</li>
@@ -42,6 +49,9 @@
 </ol>
 
 <p><a href="https://stackoverflow.com/">Visit Stack overflow</a> </p>
+
+<!--Anchor tags: use href attributes, if you want to link to something using a certain
+hyperlinked text-->
 
 <p>More information at:
   <a href="https://www.w3schools.com/">W3 Schools</a>.
